--- a/VehicleSearch/VehicleSearch.csproj
+++ b/VehicleSearch/VehicleSearch.csproj
@@ -156,12 +156,18 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Controllers\VehicleController.cs" />
+    <Compile Include="enums\FuelType.cs" />
     <Compile Include="enums\VehicleCondition.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Car.cs" />
+    <Compile Include="Models\ElectricMotor.cs" />
+    <Compile Include="Models\Engine.cs" />
+    <Compile Include="Models\Motor.cs" />
+    <Compile Include="Models\RV.cs" />
+    <Compile Include="Models\Truck.cs" />
     <Compile Include="Models\Vehicle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
